交叉编译linux并通过docker提交到集群

--- a/examples/in-cluster-client-configuration/Makefile
+++ b/examples/in-cluster-client-configuration/Makefile
@@ -2,6 +2,6 @@
 ImageVersion=v0.0.2
 
 all:
-	go build
+	export GOOS=linux && export GOARCH=amd64 &&go build
 	docker build -t hefabao/ckad-aaa:${ImageVersion} .
 	echo "all"
